--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,9 @@ jobs:
           git config user.name "${GITHUB_ACTOR}"
           git config user.email "${GITHUB_ACTOR}@users.noreply.github.com"
           git add unique_date_added.json  # or git add -A to add all files
-          git commit -m "Updated unique_date_added.json"  # change this message if you want
+          git add Kia.json  # or git add -A to add all files
+          git add Hyundai.json  # or git add -A to add all files
+          git add Suzuki.json  # or git add -A to add all files
+          git add Toyota.json  # or git add -A to add all files
+          git commit -m "Updated json files"  # change this message if you want
           git push "https://${GITHUB_ACTOR}:${TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:main || exit 0
