fix git commit exit code 1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,5 +36,5 @@ jobs:
           git add Hyundai.json  # or git add -A to add all files
           git add Suzuki.json  # or git add -A to add all files
           git add Toyota.json  # or git add -A to add all files
-          git commit -m "Updated json files"  # change this message if you want
+          git diff-index --quiet HEAD || git commit -m "Updated json files"
           git push "https://${GITHUB_ACTOR}:${TOKEN}@github.com/${GITHUB_REPOSITORY}.git" HEAD:main || exit 0
